# mics-exp-1

./: .gitignore  .mise.toml  README.md  hoge.c  latexindent.yaml  os.md  pyproject.toml  requirements.txt
edo/: 2210342_鈴木謙太郎_江戸の社会と数学レポート.md.md  2210342_鈴木謙太郎_江戸の社会と数学レポート.tex
os/: os.md
pgl/: pgl.md
report/j1/: 2210342.tex  6b.md
report/j2/: 2210342.tex  report.md
report/j6/: report.txt
report/j8/: 2210342.tex  plt.ipynb
src/j2/: doubleEq  doubleEq.v  doubleEq.vcd  doubleEqSim  doubleEqSim.v  eq  eq.v  eq.vcd  eqSim  eqSim.v  sample1  sample1.v  sample1.vcd  sample1_test.v
src/j2/adder/: addN.v  addN.vcd  addNSim  addNSim.v  calcN.v  calcN.vcd  calcNSim  calcNSim.v  compile.py
src/j2/reg/: clk.v  compile.py  count.v  countSim  countSim.v  countSim.vcd  dffn.v  dffnSim  dffnSim.v  dffnSim.vcd  regN.v  regN.vcd  regNSim  regNSim.v
src/j3/1/: Exam7.java  Exam8.java  Exam9.java
src/j3/2/: ButtonFrame.java  HelloFrame.java  NewFrame.java
src/j3/3/: Exam6.java
src/j3/4/: GlobalClock.java  GlobalClockPanel.java  TimeObservable.java
src/j4/: ex10.c  ex6.c  ex7.c  hoge  j4_1.c
src/j4/1/: hoge.ipynb  spec.py  syscp.c
src/j4/2/: hoge.ipynb  parallel.c  test.py  wait.c
src/j4/3/: run.c
src/j5/: 1.ipynb  compose.yml
src/j5/files/: 1.ipynb  2.ipynb  3.ipynb  ex1-1.c  ex1-1.lex  ex1-2.c  ex1-2.lex  ex1-2.yacc  ex2-1.c  ex2-1.lex  ex2-1.yacc  ex2-2.c  ex2-2.lex  ex2-2.yacc  ex2-3.c  ex2-3.lex  ex2-3.yacc  ex2-4.yacc  ex2-5.c  ex2-5.yacc  ex2-6.c  ex2-6.yacc  ex2-7.c  ex2-7.yacc  ex2-8.c  ex2-8.lex  ex2-8.yacc  ex3-2.c  ex3-2.lex  ex3-2.yacc  f2.c  f2.lex  f2.yacc  f3.c  f3.lex  f3.yacc  f4.c  f4.yacc  f5.c  f5.lex  (+37 more)
src/j5/files/final/: 2210342.ipynb
src/j6/: 1.lisp  10.lisp  11.lisp  12.lisp  13.lisp  14-17.lisp  18.lisp  19.lisp  20.lisp  21.lisp  22.lisp  6.lisp  7.lisp  8.lisp  9.lisp  report.txt
src/j7/: MyTri.m  MyTri_ann.m  axb.m  scr_MyTri.m  scr_MyTri_ann.m  scr_axb.m
src/j8/: bipmatching.h  dfs.h  graph.h  graph_param.h  kadai1main.c  kadai2main.c  kadai3main.c
src/j8/kadai1/: input.txt
src/j8/kadai2/: graph0_input.txt  graph0_output.txt  graph1_input.txt  graph1_output.txt  graph2_input.txt  graph2_output.txt  graph3_input.txt  graph3_output.txt  graph4_input.txt  graph4_output.txt  graph5_input.txt  graph5_output.txt  graph6_input.txt  graph6_output.txt  graph7_input.txt  graph7_output.txt  graph8_input.txt  graph9_input.txt  graph9_output.txt
src/j8/kadai4/: 160-160-0.4.txt  160-160-0.8.txt  160-20-0.4.txt  160-30-0.4.txt  160-40-0.4.txt  160-60-0.4.txt  160-80-0.4.txt  320-320-0.4.txt  320-320-0.8.txt  40-20-0.4.txt  40-20-0.8.txt  40-40-0.4.txt  640-20-0.4.txt  80-20-0.4.txt  a  randgen  randgen.c
src/j8/kadai4/result/: 160-160-0.4.txt  160-160-0.8.txt  160-20-0.4.txt  160-30-0.4.txt  160-40-0.4.txt  160-60-0.4.txt  160-80-0.4.txt  (+7 more)
tex/4/: ex4.tex
tex/j2/: report.md
tex/j3/: sample.tex
tex/j4/: 2210342.tex
tex/j8/: 2210342.tex  plt.ipynb
