[project]
name = "mics-exp-1"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "sushi-chaaaan", email = "mail@sushichan.live" }
]
dependencies = [
    "numpy==1.26.4",
    "pandasai>=2.0.37",
    "pygments>=2.18.0",
    "sympy>=1.12",
    "pyperf>=2.7.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.8.4",
    "ipykernel>=6.29.4",
    "mypy>=1.10.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mics_exp_1"]
